<resources>
    <string name="app_name">TestTaskOnlineShop</string>
    <string name="fragment_sign_in_header">Sign in</string>
    <string name="user_already_exists_error_toast_text">User already exists</string>
    <string name="fields_not_filled_error_toast_text">Not all fields are filled</string>
    <string name="user_not_found_error_toast_text">User not found</string>
    <string name="fragment_home_header">Trade by <font color="#4E55D7">bata</font></string>
    <string name="price">$ %s</string>
    <string name="discount">%d%% off</string>
    <string name="amount_of_reviews_text">(%d reviews)</string>
    <string name="color_header">Color:</string>
    <string name="quantity_header_text">Quantity: %d</string>
    <string name="add_to_cart_text">ADD TO CART</string>
    <string name="btn_login_text">Login</string>
    <string name="hint_password_text">Password</string>
    <string name="hint_first_name_text">First name</string>
    <string name="header_login_text">Welcome back</string>
    <string name="header_flash_sale_text">Flash sale</string>
    <string name="header_view_all_text">View all</string>
    <string name="header_latest_text">Latest</string>
    <string name="location_text">Location</string>
    <string name="search_product_hint_text">What are you looking for?</string>
    <string name="phone_text">Phone</string>
    <string name="headphones_text">Headphones</string>
    <string name="games_text">Games</string>
    <string name="cars_text">Cars</string>
    <string name="furniture_text">Furniture</string>
    <string name="kids_text">Kids</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_format_is_not_valid">Email format is not valid</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_btn_text">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="log_out_text">Log out</string>
    <string name="help_text">Help</string>
    <string name="restore_purchase_text">Restore purchase</string>
    <string name="trade_history_text">Trade history</string>
    <string name="balance_text">Balance</string>
    <string name="payment_method_text">Payment_method</string>
    <string name="trade_store_text">Trade store</string>
    <string name="upload_item_btn_text">Upload item</string>
    <string name="change_photo_text">Change photo</string>
    <string name="header_profile_text">Profile</string>
</resources>