<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.AuthActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.activities.AuthActivity">

        <TextView
            android:id="@+id/tv_sign_in_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_sign_in_header"
            android:layout_marginTop="120dp"
            android:height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AuthHeader" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_sign_in_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_first_name"
                android:hint="@string/hint_first_name"
                android:background="@drawable/bc_auth_fields"
                android:singleLine="true"
                android:autofillHints=""
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AuthFields" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_last_name"
                android:singleLine="true"
                android:layout_marginTop="35dp"
                android:hint="@string/hint_last_name"
                android:background="@drawable/bc_auth_fields"
                app:layout_constraintTop_toBottomOf="@id/et_first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AuthFields" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:singleLine="true"
                android:layout_marginTop="35dp"
                android:hint="@string/hint_email"
                android:background="@drawable/bc_auth_fields"
                app:layout_constraintTop_toBottomOf="@id/et_last_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AuthFields" />

            <TextView
                android:id="@+id/tv_email_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hint_email_format_is_not_valid"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                style="@style/ErrorText"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_marginTop="35dp"
                android:background="@drawable/bc_auth_buttons"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/sign_in_button_text"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/AuthButtons"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_sign_in_container">

            <TextView
                style="@style/AuthHaveAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/tv_go_to_log_in_page"
                style="@style/AuthHaveAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/log_in_btn_text"
                android:textColor="#254FE6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_sign_in_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/ll_sign_in_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_google_sign_in"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sign_in_with_google"
                    style="@style/AuthAltSignUpOptionsText"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="30dp"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_apple_sign_in"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sign_in_with_apple"
                    style="@style/AuthAltSignUpOptionsText"
                    />
            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
