<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_sign_in_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_login_text"
            android:layout_marginTop="120dp"
            android:height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AuthHeader" />

        <LinearLayout
            android:id="@+id/ll_sign_in_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_first_name"
                android:hint="@string/hint_first_name_text"
                android:background="@drawable/bc_auth_fields"
                android:singleLine="true"
                android:autofillHints=""
                style="@style/AuthFields" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:hint="@string/hint_password_text"
                    android:singleLine="true"
                    android:background="@drawable/bc_auth_fields"
                    android:paddingEnd="30dp"
                    android:paddingStart="30dp"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/AuthFields" />

                <CheckBox
                    android:id="@+id/cb_show_password"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bc_show_password_checkbox"
                    android:button="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_marginTop="100dp"
                style="@style/AuthButtons"
                android:background="@drawable/bc_auth_buttons"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:text="@string/btn_login_text"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
